[gd_scene load_steps=3 format=3 uid="uid://xguix1b3i1oe"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_0hwya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfo4e"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
modulate = Color(0.707167, 0, 0.0885249, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0hwya")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qfo4e")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Start Game" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Start Game"

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buttons/Quit" to="." method="_on_quit_button_pressed"]
